src/objects/Industry__c.object
<CustomObject>
    <fields>
        <fullName>Has_Related_Industries__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Related Industries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial__c</fullName>
        <formula>UPPER(LEFT(Name, 1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Category2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Category2</label>
        <referenceTo>Job_Category__c</referenceTo>
        <relationshipLabel>Industries (Job Category2)</relationshipLabel>
        <relationshipName>Industries2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Category3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Category3</label>
        <referenceTo>Job_Category__c</referenceTo>
        <relationshipLabel>Industries (Job Category3)</relationshipLabel>
        <relationshipName>Industries3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Job_Category4__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Category4</label>
        <referenceTo>Job_Category__c</referenceTo>
        <relationshipLabel>Industries (Job Category4)</relationshipLabel>
        <relationshipName>Industries4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Name External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sensis_Category_ID__c</fullName>
        <externalId>true</externalId>
        <label>Sensis Category ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_in_industry_search__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Show in industry search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Survival_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Survival Job</label>
        <type>Checkbox</type>
    </fields>
    <label>Industry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Sensis_Category_ID__c</columns>
        <columns>Job_Category__c</columns>
        <columns>Survival_Job__c</columns>
        <columns>Has_Related_Industries__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Industry</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Industries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>